--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/wallet-adapter-wallets": "^0.19.36",
     "@solana/web3.js": "^1.98.2",
+    "@supabase/supabase-js": "^2.49.8",
     "axios": "^1.9.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
