--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.9.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
+    "framer-motion": "^12.18.1",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
